# MediaCentre

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  defines.txt  main.cpp  resources.qrc
cmake/: CMakeLists.txt  toolchain-mingw.cmake
include/: VideoItem.h  WebcamHandler.h  include.cmake
qml/: Main.qml  qmldir
qml/components/: ConfigDialog.qml  CustomisedApplicationWindow.qml  CustomisedWindow.qml  MainContent.qml  MainToolbar.qml
src/: VideoItem.cpp  WebcamHandler.cpp  main.cpp  sources.cmake
